[package]
name = "bp3d-tracing"
version = "1.0.0-rc.2.0.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Tracing subscriber implementations for use with BP3D software. Supports traditional logging through bp3d-logger and supports remote profiling through TCP."
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/tracing/tracing"
readme = "./README.MD"
keywords = ["bp3d", "tracing"]
categories = ["development-tools", "development-tools::debugging", "development-tools::profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.32"
tracing-core = "0.1.24"
bp3d-logger = { version = "2.0.0-rc.1.0.0", path = "../debug.logger" }
time = { version = "0.3.0", features = ["macros", "formatting"] }
log = "0.4.16"
dashmap = "5.4.0"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
toml = "0.7.6"
crossbeam-channel = "0.5.4"
once_cell = "1.10.0"
unbounded-udp = "1.0.0"
bp3d-os = { version = "1.0.0-rc.1.2.1", features = ["dirs", "env", "time"] }
byteorder = "1.4.3"
tokio = { version = "1.25.0", features = ["net", "fs", "sync", "rt", "io-util", "macros"] }

[target.'cfg(all(not(any(target_vendor = "apple", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd")), any(target_arch = "x86", target_arch = "x86_64")))'.dependencies]
raw-cpuid = "10.6.0"

[build-dependencies]
semver = "1.0.7"
